--- a/index.html
+++ b/index.html
@@ -72,58 +72,45 @@
                 transform: translateX(-100%);
             }
         }
-        main {
-            padding: 20px;
+        .carousel-container {
             position: relative;
-            flex: 1;
-        }
-        table {
+            margin-top: 20px;
             width: 100%;
             max-width: 800px;
+            overflow: hidden;
             margin: 0 auto;
-            border-collapse: collapse;
-            background-color: #fff;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
         }
-        th, td {
-            padding: 10px;
-            border: 1px solid #ddd;
+        .carousel {
+            display: flex;
+            transition: transform 0.5s ease-in-out;
         }
-        th {
-            background: linear-gradient(to right, #ff6f00, #e65100); /* Deep orange to darker orange gradient for table headers */
-            color: white;
+        .carousel img {
+            width: 100%;
+            max-width: 100%;
+            border-radius: 8px;
         }
-        tr:nth-child(even) {
-            background-color: #f2f2f2;
-        }
-        footer {
+        .carousel-button {
             background: linear-gradient(to right, #ff6f00, #e65100); /* Deep orange to darker orange gradient */
+            border: none;
             color: white;
             padding: 10px;
-            position: relative;
-            bottom: 0;
-            width: 100%;
-        }
-        .video-container {
-            margin-top: 20px;
-            position: relative;
-            padding-top: 56.25%; /* 16:9 aspect ratio */
-            background-image: url('TEAM 1.jpg'); /* Replace with the actual path to your background image */
-            background-size: cover; /* Ensure the image covers the entire container */
-            background-position: center; /* Center the background image */
-            border: 4px solid #ff6f00; /* Deep orange border */
-            border-radius: 8px; /* Rounded corners */
-            box-shadow: 0 0 15px rgba(0,0,0,0.2); /* Shadow for depth */
-            overflow: hidden; /* Hide overflow */
-        }
-        .video-container iframe {
+            border-radius: 50%;
+            cursor: pointer;
             position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            border: none;
-            border-radius: 8px; /* Rounded corners */
+            top: 50%;
+            transform: translateY(-50%);
+            z-index: 10;
+            font-size: 1.5em;
+            transition: background 0.3s ease; /* Smooth transition */
+        }
+        .carousel-button:hover {
+            background: linear-gradient(to right, #e65100, #ff6f00); /* Darker gradient on hover */
+        }
+        .carousel-button.prev {
+            left: 10px;
+        }
+        .carousel-button.next {
+            right: 10px;
         }
         #video-search {
             margin-top: 20px;
@@ -154,6 +141,33 @@
         }
         #video-search button:hover {
             background: linear-gradient(to right, #e65100, #ff6f00); /* Darker gradient on hover */
+        }
+        table {
+            width: 100%;
+            max-width: 800px;
+            margin: 20px auto;
+            border-collapse: collapse;
+            background-color: #fff;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
+        th, td {
+            padding: 10px;
+            border: 1px solid #ddd;
+        }
+        th {
+            background: linear-gradient(to right, #ff6f00, #e65100); /* Deep orange to darker orange gradient for table headers */
+            color: white;
+        }
+        tr:nth-child(even) {
+            background-color: #f2f2f2;
+        }
+        footer {
+            background: linear-gradient(to right, #ff6f00, #e65100); /* Deep orange to darker orange gradient */
+            color: white;
+            padding: 10px;
+            position: relative;
+            bottom: 0;
+            width: 100%;
         }
         @media (max-width: 768px) {
             .logo {
@@ -190,12 +204,19 @@
         <h1>TCL - Tapplent Carrom League Leaderboard</h1>
         <a href="rules.pdf" class="pdf-button" target="_blank">Rules PDF</a> <!-- PDF Button -->
         <div class="live-match-container">
-            <p class="live-match-text">Live Match: Team Thalassery vs Team Gladiators - Follow the action live post 5:30pm ! -- participating teams today : Thalassery vs Gladiators , CSS Chameleons vs Boom Boom Backend , Thalassery vs Sharp Shooters , Defenders vs Java Jitters ! stay tuned for live updates.... </p>
+            <p class="live-match-text">Live Match: Team Thalassery vs Team Gladiators - Follow the action live post 5:30pm! -- participating teams today: Thalassery vs Gladiators, CSS Chameleons vs Boom Boom Backend, Thalassery vs Sharp Shooters, Defenders vs Java Jitters! Stay tuned for live updates....</p>
         </div>
     </header>
     <main>
-        <div id="leaderboard-container">
-            <!-- Data will be inserted here -->
+        <div class="carousel-container">
+            <button class="carousel-button prev" onclick="moveSlide(-1)">&#10094;</button>
+            <div class="carousel" id="carousel">
+                <img src="TEAM 1.jpg" alt="Image 1">
+                <img src="TEAM 2.jpg" alt="Image 2">
+                <img src="TEAM 3.jpg" alt="Image 3">
+                <img src="TEAM 4.jpg" alt="Image 4">
+            </div>
+            <button class="carousel-button next" onclick="moveSlide(1)">&#10095;</button>
         </div>
 
         <div id="video-search">
@@ -205,6 +226,10 @@
 
         <div class="video-container" id="video-container">
             <!-- Video will be embedded here -->
+        </div>
+
+        <div id="leaderboard-container">
+            <!-- Data will be inserted here -->
         </div>
     </main>
     <footer>
@@ -262,6 +287,15 @@
             } else {
                 alert('Please enter a valid video ID or URL.');
             }
+        }
+
+        let currentSlide = 0;
+        const slides = document.querySelectorAll('#carousel img');
+        const totalSlides = slides.length;
+
+        function moveSlide(step) {
+            currentSlide = (currentSlide + step + totalSlides) % totalSlides;
+            document.getElementById('carousel').style.transform = `translateX(-${currentSlide * 100}%)`;
         }
     </script>
 </body>
