--- a/index.html
+++ b/index.html
@@ -215,6 +215,8 @@
                 <img src="TEAM 2.jpg" alt="Image 2">
                 <img src="TEAM 3.jpg" alt="Image 3">
                 <img src="TEAM 4.jpg" alt="Image 4">
+                <img src="TEAM 5.jpg" alt="Image 4">
+
             </div>
             <button class="carousel-button next" onclick="moveSlide(1)">&#10095;</button>
         </div>
