--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@
                 <img src="TEAM 3.jpg" alt="Image 3">
                 <img src="TEAM 4.jpg" alt="Image 4">
                 <img src="TEAM 5.jpg" alt="Image 4">
+                <img src="TEAM 6.jpg" alt="Image 4">
 
             </div>
             <button class="carousel-button next" onclick="moveSlide(1)">&#10095;</button>
