--- a/index.html
+++ b/index.html
@@ -220,6 +220,7 @@
                 <img src="TEAM 7.jpg" alt="Image 7">
                 <img src="TEAM 8.jpg" alt="Image 8">
                 <img src="TEAM 9.jpg" alt="Image 9">
+                <img src="TEAM 10.jpg" alt="Image 10">
 
             </div>
             <button class="carousel-button next" onclick="moveSlide(1)">&#10095;</button>
