--- a/index.html
+++ b/index.html
@@ -221,6 +221,8 @@
                 <img src="TEAM 8.jpg" alt="Image 8">
                 <img src="TEAM 9.jpg" alt="Image 9">
                 <img src="TEAM 10.jpg" alt="Image 10">
+                <img src="TEAM 11.jpg" alt="Image 11">
+
 
             </div>
             <button class="carousel-button next" onclick="moveSlide(1)">&#10095;</button>
